# synth

./: .gitignore
analysis/: teleplot_layout_envelope.json
firmware/: CMakeLists.txt  DAC.cpp  DAC.h  PrintVariables.cmake  Tone.cpp  Tone.h  ToneSheduler.cpp  ToneSheduler.h  button.cpp  button.h  core1main.cpp  core1main.h  displayDriver.cpp  displayDriver.h  i2s.pio  ili9488.c  ili9488.h  ili9488_driver.c  ili9488_driver.h  ili9488_font.c  ili9488_font.h  ili9488_if.c  ili9488_if.h  ili9488_low_if.c  ili9488_low_if.h  ili9488_types.h  label.cpp  label.h  main.cpp  point.h  rectangle.cpp  rectangle.h  text.cpp  text.h  ui.cpp  ui.h  xpt2046.c  xpt2046.cpp  xpt2046.h
firmware/ili9488/: ili9488.c  ili9488.h  ili9488_cfg.h  ili9488_driver.c  ili9488_driver.h  ili9488_if.c  ili9488_low_if.c  ili9488_low_if.h  ili9488_regdef.h
firmware/ui/: button.h  label.cpp  label.h  point.h  rectangle.h  text.cpp  text.h  ui.cpp  ui.h
firmware/ui_songs/: ui_song.cpp  ui_song.h  ui_tone.h
firmware/ui_songs/songs/: sampleSong.cpp  ui_song_interface.h
firmware/xpt2046/: xpt2046.cpp  xpt2046.h
